Ensure text remains visible during webfont load

--- a/content/themes/dude/sass/helpers/_typography.scss
+++ b/content/themes/dude/sass/helpers/_typography.scss
@@ -4,8 +4,9 @@
 // Helper mixin for self-hosted fonts
 @mixin fontface($family, $src, $weight: normal, $style: normal) {
   @font-face {
-    // @link https://css-tricks.com/almanac/properties/f/font-display/
-    font-display: auto;
+    // Ensure text remains visible during webfont load
+    // @source https://web.dev/font-display/
+    font-display: swap;
     font-family: $family;
     font-style: $style;
     font-weight: $weight;
